--- a/Windows Debloater Programs/ShutUp10/ooshutup10.cfg
+++ b/Windows Debloater Programs/ShutUp10/ooshutup10.cfg
@@ -1,7 +1,7 @@
 ############################################################################
 # This file was created with O&O ShutUp10 and can be imported onto another computer. 
 #
-# Download the application at https://www.oo-software.com/en/shutup10
+# Download the application at https://www.oo-software.com/shutup10
 # You can then import the file from within the program. 
 #
 # Alternatively you can import it automatically over a command line. Simply use
@@ -26,9 +26,15 @@ P017	-
 P026	-
 P027	+
 P028	-
+P064	+
+P065	+
+P066	+
+P067	-
+P069	-
 P009	-
 P010	-
 P015	+
+P068	-
 P016	+
 A001	+
 A002	-
@@ -37,30 +43,72 @@ A004	-
 A006	-
 A005	-
 P007	-
+P036	-
 P025	-
+P033	-
 P023	-
+P056	+
+P057	+
 P012	-
+P034	-
 P013	-
+P035	-
+P062	-
+P063	-
+P047	+
 P019	-
+P048	-
+P049	-
 P020	-
+P037	-
 P011	-
+P038	-
+P050	-
+P051	-
 P018	-
+P039	-
 P021	-
+P040	-
 P022	-
+P041	-
 P014	-
+P042	-
+P052	-
+P053	-
+P054	-
+P055	-
 P029	-
+P043	-
 P030	-
+P044	-
 P031	-
+P045	-
 P032	-
+P046	-
+P058	-
+P059	-
+P060	-
+P061	-
 P024	-
 S001	-
 S002	+
 S003	+
-S004	+
-S005	+
 S008	-
-S009	-
-S010	-
+E101	-
+E115	-
+E116	-
+E117	-
+E118	-
+E107	-
+E111	-
+E112	-
+E109	-
+E121	-
+E103	-
+E119	-
+E120	-
+E122	-
+E106	-
 E001	+
 E002	+
 E003	-
@@ -84,9 +132,6 @@ Y006	+
 Y007	+
 C012	-
 C002	+
-C004	+
-C005	+
-C006	+
 C013	-
 C007	-
 C008	+
@@ -94,28 +139,19 @@ C009	+
 C010	-
 C011	+
 L001	-
-L002	-
 L003	-
 L004	-
 L005	+
-L006	+
-L007	+
-L008	+
 U001	+
-U002	+
-U003	+
 U004	+
 U005	+
 W001	+
-W002	+
-W003	-
 W011	-
 W004	-
 W005	+
 W010	-
 W009	-
 W006	-
-W007	-
 W008	-
 M006	+
 M011	+
@@ -125,12 +161,11 @@ O001	-
 S012	-
 S013	-
 S014	-
-S011	+
+S011	-
 K001	-
 K002	+
 K005	-
 M001	-
-M002	-
 M004	+
 M005	+
 M003	+
