DON'T DISABLE WIN DEFENDER >:(

--- a/Windows Debloater Programs/Winaero Tweaker/Winaero_Tweaker_exported_configs.ini
+++ b/Windows Debloater Programs/Winaero Tweaker/Winaero_Tweaker_exported_configs.ini
@@ -1,7 +1,7 @@
 ï»¿
 [Format]
 ProductName=Winaero Tweaker
-ProductVersion=0.16.1.0
+ProductVersion=0.17.1.0
 FormatVersion=1.1
 [User]
 pageAdsUnwantedApps=1
@@ -21,7 +21,6 @@ pageControlPanelWU=1
 pageDisableOnlineVideoTips=1
 pageNavPaneDefaultItems=1
 pageNetworkComputers1803=1
-pageDefender=1
 pageDefenderTrayIcon=1
 pageDisableCortana=1
 pageDisableWindowsInk=1
@@ -46,7 +45,7 @@ pageDefenderAntiMalware=1
 [pageAdsUnwantedApps]
 UnwantedAppsDisabled=1
 FileExplorerAdsDisabled=1
-LockScreenAdsDisabled=1
+LockScreenAdsDisabled=0
 StartSuggestionsDisabled=1
 TipsAboutWindowsDisabled=1
 WelcomePageDisabled=1
@@ -95,33 +94,33 @@ Classic=1
 ThisPCFoldersCount=8
 ThisPCFolder0CLSID={B4BFCC3A-DB2C-424C-B029-7FE99A87C641}
 ThisPCFolder0Name=Área de Trabalho
-ThisPCFolder0IconPath=C:\Windows\system32\imageres.dll,-183
+ThisPCFolder0IconPath=C:\WINDOWS\system32\imageres.dll,-183
 ThisPCFolder0Target=
-ThisPCFolder1CLSID={abbf21a9-fa73-40ef-aa93-5f9ffa61f507}
+ThisPCFolder1CLSID={0b514445-a931-4bbc-9476-f8c589967b8b}
 ThisPCFolder1Name=Dispositivos e Impressoras
 ThisPCFolder1IconPath=C:\Windows\system32\DeviceCenter.dll,-1
 ThisPCFolder1Target=shell:::{a8a91a66-3a7d-4424-8d24-04e180695c7a}
 ThisPCFolder2CLSID={d3162b92-9365-467a-956b-92703aca08af}
 ThisPCFolder2Name=Documentos
-ThisPCFolder2IconPath=C:\Windows\system32\imageres.dll,-112
+ThisPCFolder2IconPath=C:\WINDOWS\system32\imageres.dll,-112
 ThisPCFolder2Target=
 ThisPCFolder3CLSID={088e3905-0323-4b02-9826-5d99428e115f}
 ThisPCFolder3Name=Downloads
-ThisPCFolder3IconPath=C:\Windows\system32\imageres.dll,-184
+ThisPCFolder3IconPath=C:\WINDOWS\system32\imageres.dll,-184
 ThisPCFolder3Target=
 ThisPCFolder4CLSID={24ad3ad4-a569-4530-98e1-ab02f9417aa8}
 ThisPCFolder4Name=Imagens
-ThisPCFolder4IconPath=C:\Windows\system32\imageres.dll,-113
+ThisPCFolder4IconPath=C:\WINDOWS\system32\imageres.dll,-113
 ThisPCFolder4Target=
-ThisPCFolder5CLSID={f6380f5e-d282-4223-b20f-5d8bd0df9aec}
+ThisPCFolder5CLSID={72163544-75ee-4407-bd93-9f5affd9df4b}
 ThisPCFolder5Name=Lixeira
 ThisPCFolder5IconPath=C:\Windows\System32\imageres.dll,-55
 ThisPCFolder5Target=shell:::{645ff040-5081-101b-9f08-00aa002f954e}
 ThisPCFolder6CLSID={3dfdf296-dbec-4fb4-81d1-6a3438bcf4de}
 ThisPCFolder6Name=Músicas
-ThisPCFolder6IconPath=C:\Windows\system32\imageres.dll,-108
+ThisPCFolder6IconPath=C:\WINDOWS\system32\imageres.dll,-108
 ThisPCFolder6Target=
 ThisPCFolder7CLSID={f86fa3ab-70d2-4fc7-9c99-fcbf05467f3a}
 ThisPCFolder7Name=Vídeos
-ThisPCFolder7IconPath=C:\Windows\system32\imageres.dll,-189
+ThisPCFolder7IconPath=C:\WINDOWS\system32\imageres.dll,-189
 ThisPCFolder7Target=
