Update Winaero Tweaker and small tweaks

--- a/Windows Debloater Programs/Winaero Tweaker/Winaero_Tweaker_exported_configs.ini
+++ b/Windows Debloater Programs/Winaero Tweaker/Winaero_Tweaker_exported_configs.ini
@@ -1,7 +1,7 @@
 ï»¿
 [Format]
 ProductName=Winaero Tweaker
-ProductVersion=0.17.1.0
+ProductVersion=0.18.0.0
 FormatVersion=1.1
 [User]
 pageAdsUnwantedApps=1
@@ -34,7 +34,6 @@ pageDisableDriverUpdates10=1
 pageExplorerNewMenu=1
 pageContextMenuAppMode=1
 pageContextMenuControlPanel=1
-pageContextMenuHash=1
 pageContextMenuPSAsAdmin=1
 pageContextMenuWallpaperPath=1
 pageControlPanelPersonalization=1
@@ -62,6 +61,7 @@ MultipleInvokePromptMinimum=70
 [pageContextMenuRemoveDefault]
 IsEditWithPaint3DRemoved=1
 IsPreviousVersionsRemoved=1
+IsShareWithSkypeRemoved=1
 [pageNavPaneDefaultItems]
 {679F85CB-0220-4080-B29B-5540CC05AAB6}=0
 {323CA680-C24D-4099-B94D-446DD2D7249E}=0
@@ -91,12 +91,12 @@ Extended=1
 Modern=1
 Classic=1
 [pageThisPCTweaker]
-ThisPCFoldersCount=8
+ThisPCFoldersCount=10
 ThisPCFolder0CLSID={B4BFCC3A-DB2C-424C-B029-7FE99A87C641}
 ThisPCFolder0Name=Área de Trabalho
 ThisPCFolder0IconPath=C:\WINDOWS\system32\imageres.dll,-183
 ThisPCFolder0Target=
-ThisPCFolder1CLSID={0b514445-a931-4bbc-9476-f8c589967b8b}
+ThisPCFolder1CLSID={ef5d7a69-c3fc-4124-8c64-fe47c71aa04e}
 ThisPCFolder1Name=Dispositivos e Impressoras
 ThisPCFolder1IconPath=C:\Windows\system32\DeviceCenter.dll,-1
 ThisPCFolder1Target=shell:::{a8a91a66-3a7d-4424-8d24-04e180695c7a}
@@ -112,7 +112,7 @@ ThisPCFolder4CLSID={24ad3ad4-a569-4530-98e1-ab02f9417aa8}
 ThisPCFolder4Name=Imagens
 ThisPCFolder4IconPath=C:\WINDOWS\system32\imageres.dll,-113
 ThisPCFolder4Target=
-ThisPCFolder5CLSID={72163544-75ee-4407-bd93-9f5affd9df4b}
+ThisPCFolder5CLSID={498e0a0b-1edc-47f4-a4b1-14fd669e1878}
 ThisPCFolder5Name=Lixeira
 ThisPCFolder5IconPath=C:\Windows\System32\imageres.dll,-55
 ThisPCFolder5Target=shell:::{645ff040-5081-101b-9f08-00aa002f954e}
@@ -120,7 +120,15 @@ ThisPCFolder6CLSID={3dfdf296-dbec-4fb4-81d1-6a3438bcf4de}
 ThisPCFolder6Name=Músicas
 ThisPCFolder6IconPath=C:\WINDOWS\system32\imageres.dll,-108
 ThisPCFolder6Target=
-ThisPCFolder7CLSID={f86fa3ab-70d2-4fc7-9c99-fcbf05467f3a}
-ThisPCFolder7Name=Vídeos
-ThisPCFolder7IconPath=C:\WINDOWS\system32\imageres.dll,-189
-ThisPCFolder7Target=
+ThisPCFolder7CLSID={4b3ed97b-fb81-4949-86e8-2d4e069c6269}
+ThisPCFolder7Name=Painel de Controle
+ThisPCFolder7IconPath=C:\WINDOWS\System32\imageres.dll,-27
+ThisPCFolder7Target=shell:::{26ee0668-a00a-44d7-9371-beb064c98683}
+ThisPCFolder8CLSID={d7d45162-8f73-478a-8a8a-0def7953a429}
+ThisPCFolder8Name=Sistema
+ThisPCFolder8IconPath=C:\WINDOWS\System32\imageres.dll,-149
+ThisPCFolder8Target=shell:::{bb06c0e4-d293-4f75-8a90-cb05b6477eee}
+ThisPCFolder9CLSID={f86fa3ab-70d2-4fc7-9c99-fcbf05467f3a}
+ThisPCFolder9Name=Vídeos
+ThisPCFolder9IconPath=C:\WINDOWS\system32\imageres.dll,-189
+ThisPCFolder9Target=
