Silent debloat softwares: - Move ShutUp10 Download folder - Refactor file to be more safe (removed *) - Put a better description and URLs
README:
- Refactored the common script features

Backup System:
- Rename Restore Point

Opt. Security:
- Renamed tweak output to Security Category

Remove Bloatware Apps:
- Refactor to be more precise when displaying what was removed

Removed .txt files and use 1 instead on /src/tmp/

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 # When extracted the debloat-softwares but not wiped
 
-# Shut Up 10
-**/debloat-softwares/ShutUp10/*.exe
-
 # Temporary folder for downloaded stuff
-!**/tmp/*.txt
-**/tmp/*.exe
-**/tmp/*.appxbundle
+!**/tmp/**/*.txt
+**/tmp/**/*.exe
+**/tmp/**/*.appxbundle
 
 # Downloaded temporary files
 *.tmp
@@ -15,4 +12,4 @@
 *.Identifier
 
 # Ignore installers, WSL2 update in this case
-*.msi
+*.msi*
