Created a lib to make a default download proccess - Added ArchWSL install script (yuk7) - Updated WSL2 + WSLg - Updated Winget Install - Added HandBrake Install

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 
 # Temporary folder for downloaded stuff
 !**/tmp/**/*.txt
+**/tmp/**/*.appx*
+**/tmp/**/*.cer
 **/tmp/**/*.exe
-**/tmp/**/*.appxbundle
 
 # Downloaded temporary files
 *.tmp
