Testing default Linter options

--- a/.github/workflows/powershell-linter.yml
+++ b/.github/workflows/powershell-linter.yml
@@ -3,9 +3,10 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 #
-# https://github.com/microsoft/action-psscriptanalyzer
+# https://github.com/microsoft/psscriptanalyzer-action
 # For more information on PSScriptAnalyzer in general, see
 # https://github.com/PowerShell/PSScriptAnalyzer
+# Rules at: https://github.com/PowerShell/PSScriptAnalyzer/tree/master/docs/Rules
 
 name: PSScriptAnalyzer
 
@@ -27,12 +28,13 @@ jobs:
       - name: Run PSScriptAnalyzer
         uses: microsoft/psscriptanalyzer-action@2044ae068e37d0161fa2127de04c19633882f061
         with:
-          # Check https://github.com/microsoft/action-psscriptanalyzer for more info about the options.
           # The below set up runs PSScriptAnalyzer to your entire repository and runs some basic security rules.
           path: .\
           recurse: true 
-          # Include your own basic security rules. Removing this option will run all the rules 
-          includeRule: '"PSAvoidGlobalAliases", "PSAvoidUsingConvertToSecureStringWithPlainText"'
+          # Include your own basic security rules. Removing this option will run all the rules
+          includeDefaultRules: true 
+          # Enabling all default rules to trigger more.
+          #includeRule: '"PSAvoidGlobalAliases", "PSAvoidUsingConvertToSecureStringWithPlainText"'
           output: results.sarif
       
       # Upload the SARIF file generated in the previous step
