Solve Major problems identified by PSScriptAnalyzer - Excluded some of the Rules - Renamed most functions and variables to follow the coding style - Removed a lot of Whitespaces - Moved Remove and Disable Xbox to src/scripts as it helps debloating - Use 'SupportShouldProccess' on some functions (still don't know why it serves) - Renamed variables on "setup git keys and sign"

--- a/.github/workflows/powershell-linter.yml
+++ b/.github/workflows/powershell-linter.yml
@@ -35,6 +35,7 @@ jobs:
           includeDefaultRules: true 
           # Enabling all default rules to trigger more.
           #includeRule: '"PSAvoidGlobalAliases", "PSAvoidUsingConvertToSecureStringWithPlainText"'
+          excludeRule: '"AvoidGlobalVars", "AvoidUsingInvokeExpression", "AvoidUsingWMICmdlet", "AvoidUsingWriteHost"'
           output: results.sarif
       
       # Upload the SARIF file generated in the previous step
