--- a/.github/workflows/powershell-linter.yml
+++ b/.github/workflows/powershell-linter.yml
@@ -16,7 +16,7 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    - cron: '30 12 * * 6'
+    - cron: '30 12 * * 0-6'
     
 jobs:
   build:
