ci: update powershell-linter to apply on main and develop branches

--- a/.github/workflows/powershell-linter.yml
+++ b/.github/workflows/powershell-linter.yml
@@ -12,9 +12,13 @@ name: PSScriptAnalyzer
 
 on:
   push:
-    branches: [ main ]
+    branches:
+    - main
+    - develop
   pull_request:
-    branches: [ main ]
+    branches:
+    - main
+    - develop
   schedule:
     - cron: '30 12 * * 0-6'
     
