`docs`: minor update on documentations - Contributing has a direct reference to the guide - Readme has a Contributing section linking to the CONTRIBUTING file - Bug Report has the location to the new log folder - On OS selector, put just Windows 10/Windows 11 (without architecture)

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -49,11 +49,8 @@ body:
       label: Operating System
       description: Versions before Windows 10 are not supported
       options:
-      - Windows 11 (64-bits)
-      - Windows 11 (ARM64)
-      - Windows 10 (64-bits)
-      - Windows 10 (32-bits)
-      - Windows 10 (ARM64)
+      - Windows 11
+      - Windows 10
     validations:
       required: true
   - type: input
@@ -86,8 +83,8 @@ body:
       label: Logs
       description: |
         **Only needed if it's error related**
-        Put your log file from: C:\Users\{ Your User }\AppData\Local\Temp\Win10ScriptXXX_YYYY-MM-DD_hh-mm-ss.txt
-        TIP: press `Win + R` and type: `%Temp%`, then find the log file
+        Put your log file from: C:\Users\{ Your User }\AppData\Local\Temp\Win-DT-Logs\Win10ScriptXXX_YYYY-MM-DD_hh-mm-ss.txt
+        TIP: press `Win + R` and type `%Temp%` then hit `ENTER`, now find the log file
     validations:
       required: false
   - type: textarea
