--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,7 +1,7 @@
 # Docs - https://docs.github.com/en/communities/using-templates-to-encourage-useful-issues-and-pull-requests/syntax-for-githubs-form-schema
 name: Feature Request
 description: Suggest a new feature for this debloat script.
-labels: ["Enhancement / Feature Request"]
+labels: ["Feature Request"]
 # title: "FR: "
 # assignees:
 #   - octocat
