Remove other Funding.yml option

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -11,4 +11,4 @@ github: [LeDragoX] # Replace with up to 4 GitHub Sponsors-enabled usernames e.g.
 #otechie: # Replace with a single Otechie username
 #lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
 # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
-custom: ['Pix-ITAÚ-ba1c19f6-5d19-4806-ac99-d12b1e751fc2']
+# custom: []
